simple/test/features/errors/semantic/e1064_wrong_intrinsic_type.spl
# E1064: Wrong Intrinsic Type

Feature: E1064 - Wrong Type for Intrinsic
  As a Simple compiler
  I want to detect when intrinsics are used with wrong types
  So that intrinsic operations are type-safe

  Background:
    Given I have the Simple compiler

  Scenario: Intrinsic with wrong type
    When I compile:
      '''
      fn test():
        # size_of expects type parameter, not value
        val s = size_of("hello")  # Error: expects type
      '''
    Then I should see error E1064
    And the error message should be "intrinsic `{intrinsic}` requires type `{expected}`, found `{found}`"
    And the label should indicate "wrong type for intrinsic"
    And the help should suggest "use the correct type required by this intrinsic"

  Scenario: Valid intrinsic usage
    When I compile:
      '''
      fn test():
        val s = size_of<i32>()  # OK: correct type parameter
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        val s = size_of("hello")
      '''
    Then I should see error E1064
    And the error message should contain "잘못된 내장 함수 타입"
